@@ -5,6 +5,7 @@
     * Merge functionality of older Sublimation project (add sublimateIce option)
     * Change strike lightning 100+ meters away to Sword + Power (was Sword + Flame)
     * Add Sword + Flame = temporary glowstone headlamp
+    * Add Helmet + Fire Aspect = swim in lava
 
 2012-02-03  0.2
     * Add Bow + Sharpness = increase velocity
